# solo2-gui

./: .gitignore  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  rollup.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/commands/: update.rs
src/components/: Device.svelte  Picker.svelte
src/lib/: stores.ts
src/routes/: Fido.svelte  Oath.svelte  Piv.svelte  Start.svelte  Update.svelte
