[package]
name = "solo2-gui"
description = "SoloKeys Solo 2 GUI"
authors = ["you"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/solokeys/solo2-gui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
solo2 = { path = "../../solo2-cli" }

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
