[package]
name = "solo2-gui"
description = "SoloKeys Solo 2 GUI"
authors = ["you"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/solokeys/solo2-gui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
indicatif = "0.17"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solo2 = { path = "../../solo2-cli" }
tauri = { version = "1", features = ["api-all"] }
tokio = "1"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
